--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "ecmastack",
   "dependencies": {
     "ember": "~2.10.0",
-    "ember-cli-shims": "0.1.3"
+    "ember-cli-shims": "0.1.3",
+    "tether": "^1.4.0"
   }
 }
