--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "ember": "~2.10.0",
     "ember-cli-shims": "0.1.3",
-    "tether": "^1.4.0"
+    "tether": "^1.4.0",
+    "firebase": "^3.0.0"
   }
 }
