--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "aws-sdk": "^2.9.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-bootstrap-4": "0.1.2",
+    "ember-browserify": "^1.1.13",
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -48,5 +50,8 @@
   "engines": {
     "node": ">= 0.12.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "aws-sdk": "^2.9.0"
+  }
 }
